correção de erros na imagem de fundo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
     <header class="header">
         <nav class="menu">
             <div class="logo">
@@ -62,7 +61,7 @@
                     <div class="projetos__item">
                         <h3>Alimentação</h3>
                         <figure>
-                            <img src="img/aliementacao.jpeg" alt="Alimentação">
+                            <img src="img/alimentacao.jpeg" alt="Alimentação">
                         </figure>
                         <p>
                             Levamos alimentos à população com insegurança alimentar
